# claudify

./: BUILD_AUTOMATION.md  CLAUDE.md  CLAUDE_COMMANDS.md  INFRA_STACK.md  NEXTJS_STACK.md  NEXTJS_STANDARDS.md  PYTHON_LATER.md  PYTHON_MUST.md  PYTHON_SNIPPETS.md  PYTHON_STACK.md  PYTHON_STANDARDS.md  PYTHON_TODO.md  README.md  UX_PRINCIPLES.md
.claude/: settings.local.json
FEATURES/: ARCHITECTURE.md  CLAUDE.md  DEV.md  MODELS.md  REPOSITORY.md  REVIEW.md  TODO.md  XAI.md  XARCH.md  XINSPECTOR.md  XMODELS.md  XMUTATIONS.md  XOBJPROTOTYPE.md  XREGISTRY.md  XREPO.md  XRESOURCE.md  XSETTINGS.md  XVIEW.md
FEATURES/sandbox/: CLAUDE.md  README.md  __init__.py  demo_output.py  pyarrow.py  pyproject.toml  pytest.ini  run_tests.py  xobj_prototype.py
FEATURES/sandbox/configs/: __init__.py  test_settings.py
FEATURES/sandbox/fixtures/: __init__.py  xobj_fixtures.py
FEATURES/sandbox/mock/: __init__.py  base.py  xobj_factories.py
FEATURES/sandbox/tests/: __init__.py  base.py  conftest.py
FEATURES/sandbox/tests/unit/: test_base.py  test_rich_example.py
FEATURES/sandbox/utils/: __init__.py  output.py
